--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: vendor/bin/phpunit --verbose
   build-and-push-image:
     runs-on: ubuntu-latest
-    needs: test
+    needs: tests
     steps:
       - name: Checkout
         uses: actions/checkout@v2
