--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,18 +41,39 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
-  build-and-push-image:
+  build:
     runs-on: ubuntu-latest
-    needs: tests
+    #needs: tests
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Build container image
-        uses: docker/build-push-action@v1
+
+      - name: Tag
+        uses: ChloePlanet/github-tag-action@master
+        id: tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          RELEASE_BRANCHES: main
+
+      - name: Publish Docker Image
+        uses: machine-learning-apps/gpr-docker-publish@master
+        id: docker
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: ghadevopsbackend
-          tag_with_sha: true
-          tag_with_ref: true
+          IMAGE_NAME: 'books_app'
+          TAG: ${{ steps.tag.outputs.new_tag }}
+          DOCKERFILE_PATH: 'Dockerfile'
+          BUILD_CONTEXT: '.'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.tag.outputs.new_tag }}
+          release_name: Release ${{ steps.tag.outputs.new_tag }}
+          draft: false
+          prerelease: false
