Change username ssh

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,8 +19,9 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           envs: GITHUB_USERNAME, GITHUB_TOKEN
-          script: |
-            docker stop $(docker ps -a -q)
-            docker login docker.pkg.github.com -u $GITHUB_USERNAME -p $GITHUB_TOKEN
-            docker pull docker.pkg.github.com/marcware/gha-devops-backend/books_app:latest
-            docker run -dit -p 80:80 docker.pkg.github.com/marcware/gha-devops-backend/books_app:latest
+          script: whoami
+         # script: |
+          #  docker stop $(docker ps -a -q)
+          #  docker login docker.pkg.github.com -u $GITHUB_USERNAME -p $GITHUB_TOKEN
+          #  docker pull docker.pkg.github.com/marcware/gha-devops-backend/books_app:latest
+          #  docker run -dit -p 80:80 docker.pkg.github.com/marcware/gha-devops-backend/books_app:latest
