--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,15 +16,11 @@ jobs:
         with:
           host: web1.marcware.es
           username: ${{ secrets.USERNAME }}
-          #password: ${{ secrets.PASSWORD }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           envs: GITHUB_USERNAME, GITHUB_TOKEN
-          script: |
-            whoami
-            ls -al
-         # script: |
-          #  docker stop $(docker ps -a -q)
-          #  docker login docker.pkg.github.com -u $GITHUB_USERNAME -p $GITHUB_TOKEN
-          #  docker pull docker.pkg.github.com/marcware/gha-devops-backend/books_app:latest
-          #  docker run -dit -p 80:80 docker.pkg.github.com/marcware/gha-devops-backend/books_app:latest
+         script: |
+           docker stop $(docker ps -a -q)
+           docker login docker.pkg.github.com -u $GITHUB_USERNAME -p $GITHUB_TOKEN
+           docker pull docker.pkg.github.com/marcware/gha-devops-backend/books_app:latest
+           docker run -dit -p 80:80 docker.pkg.github.com/marcware/gha-devops-backend/books_app:latest
