--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Copy Repo Files
         uses: actions/checkout@master
+      - name: List
+        run: ls -la
       - name: Build the stack
         run: composer up -d
       - name: Test
