--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,10 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+
+      - name: Login to GitHub Packages
+        uses: docker/login-action@v1
+
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2
         with:
@@ -56,3 +60,4 @@ jobs:
           registry: docker.pkg.github.com
           repository: marcware/gha-devops-backend/books_app
           tag_with_ref: true
+          push: true
