--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,7 +39,7 @@ jobs:
         if: ${{ steps.tag.outputs.tag_generated == 1 }}
         uses: shimataro/ssh-key-action@v2
         with:
-          name: id_rsa
+          name: id_rsa.pub
           key: ${{ secrets.KEY_PUBLIC }}
           known_hosts: ${{ secrets.KNOWN_HOST }}
 
