--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -48,7 +48,16 @@ jobs:
           cd ~/.ssh
           ls -la
 
+      - name: Deploy context
+        if: ${{ steps.tag.outputs.tag_generated == 1 }}
+        run: |
+          docker context create remote --docker "host=ssh://${{ secrets.USERNAME }}@${{ secrets.HOST }}"
+          docker context list
 
+      - name: Deploy remote login
+        if: ${{ steps.tag.outputs.tag_generated == 1 }}
+        run: |
+            docker --context remote login -u marcware -p c57bb3e99719fe63c65f3af0f799753b4807abe5 docker.pkg.github.com
 
       - name: Deploy docker-compose-prod
         if: ${{ steps.tag.outputs.tag_generated == 1 }}
