Docker test 35 #patch

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,4 +16,9 @@ jobs:
           key: ${{ secrets.KEY_PRIVATE }}
           port: ${{ secrets.PORT }}
           script: |
-            ls -la
+            cd GHA-DevOps-Backend
+            docker-compose down
+            git fetch --all
+            git reset --hard origin/main
+            docker pull marcware/books_app:lastest
+            docker-compose docker-compose-prod.yml up -d
