--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,4 +21,8 @@ jobs:
             git fetch --all
             git reset --hard origin/main
             docker pull marcware/books_app:lastest
-            docker-compose docker-compose-prod.yml up -d
+            docker-compose -f docker-compose-prod.yml up
+            docker exec -it lumen-book composer install
+            CREAR EL PUNTO ENV
+            DAR PERMISOS A VENDORS Y A STORAGE
+
