--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,7 +16,7 @@ jobs:
           key: ${{ secrets.KEY_PRIVATE }}
           port: ${{ secrets.PORT }}
           script: |
-            cd GHA-DevOps-Backend
+            cd GHA-DevOps-Backend/
             docker-compose down
             git fetch --all
             git reset --hard origin/main
