Docker test 41 #patch

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,7 @@ jobs:
             git reset --hard origin/main
             docker pull marcware/books_app:lastest
             docker-compose -f docker-compose-prod.yml up
-            docker exec -it lumen-book composer install
+            docker exec -it lumen-book composer update
             cp .env.pro .env
             chmod -R ug+rwx storage bootstrap/cache vendor
 
