--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,3 +40,38 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
+
+  build:
+    name: Publish
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ 7.1 ]
+
+    steps:
+      - name: Checkout code
+
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
+
+      - name: Tag
+        uses: ChloePlanet/github-tag-action@master
+        id: tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          RELEASE_BRANCHES: main
+
+      - name: Create Release
+        if: ${{ steps.tag.outputs.tag_generated == 1 }}
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.tag.outputs.new_tag }}
+          release_name: Release ${{ steps.tag.outputs.new_tag }}
+          draft: false
+          prerelease: false
+
