--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
           script: |
               cd GHA-DevOps-Backend/
               docker pull marcware/books_app:lastest
-              docker-compose -f docker-compose-prod.yml up
+              docker-compose -f docker-compose-prod.yml up -d
 
       - name: Deploy package to digitalocean pull DockerHub Vendors
         uses: appleboy/ssh-action@master
